feat: added filter-display desktop layout

--- a/index.html
+++ b/index.html
@@ -18,6 +18,128 @@
       <div class="main-title">
         <h1>寶可夢篩選搜尋器</h1>
       </div>
+      <section class="filter-display display-expand">
+        <div class="pokemon-filter">
+          <div class="scroll-wrapper">
+            <div class="filter-container">
+              <div class="filter-title">
+                <h5>寶可夢</h5>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+              <ul class="filter-option-group">
+                <li class="filter-option">
+                  <p>碧之假面北上鄉圖鑑內的寶可夢</p>
+                  <button><i class="fa-solid fa-xmark"></i></button>
+                </li>
+                <li class="filter-option">
+                  <p>藍之圓盤藍莓學院圖鑑內的寶可夢</p>
+                  <button><i class="fa-solid fa-xmark"></i></button>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="species-filter">
+          <div class="scroll-wrapper">
+            <div class="types-filter filter-container">
+              <div class="filter-title">
+                <h5>屬性篩選器</h5>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+              <ul class="filter-option-group">
+                <li class="filter-option">
+                  <p>所有屬性</p>
+                </li>
+                <li class="filter-option">
+                  <p>篩選所選屬性的所有組合</p>
+                  <button><i class="fa-solid fa-xmark"></i></button>
+                </li>
+              </ul>
+            </div>
+            <div class="abilities-filter filter-container">
+              <div class="filter-title">
+                <h5>特性篩選器</h5>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+              <ul class="filter-option-group">
+                <li class="filter-option">
+                  <p>所有特性</p>
+                </li>
+              </ul>
+            </div>
+            <div class="stats-filter filter-container">
+              <div class="filter-title">
+                <h5>種族值篩選器</h5>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+              <ul class="filter-option-group">
+                <li class="filter-option">
+                  <p>HP介於 1 ~ 255 之間</p>
+                  <button><i class="fa-solid fa-xmark"></i></button>
+                </li>
+                <li class="filter-option">
+                  <p>攻擊介於 10 ~ 180 之間</p>
+                  <button><i class="fa-solid fa-xmark"></i></button>
+                </li>
+                <li class="filter-option">
+                  <p>防禦介於 10 ~ 180 之間</p>
+                  <button><i class="fa-solid fa-xmark"></i></button>
+                </li>
+              </ul>
+            </div>
+            <div class="moves-filter filter-container">
+              <div class="filter-title">
+                <h5>招式篩選器</h5>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+              <ul class="filter-option-group">
+                <li class="filter-option">
+                  <p>守住</p>
+                  <button><i class="fa-solid fa-xmark"></i></button>
+                </li>
+                <li class="filter-option">
+                  <p>僅篩選同時都能習得所輸入的招式之寶可夢</p>
+                  <button><i class="fa-solid fa-xmark"></i></button>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="filter-button-wrapper">
+          <button class="filter-button">
+            <i class="fa-solid fa-angle-left"></i><i class="fa-solid fa-filter-circle-xmark"></i>
+          </button>
+        </div>
+        <div class="result-stats"><p>一共搜尋到 100 隻符合條件的寶可夢</p></div>
+        <div class="pokemon-search">
+          <label for="search-pokemon">
+            <input type="text" id="search-pokemon" placeholder="快速搜尋寶可夢" /><button
+              type="button"
+              class="search-pokemon-submit"
+            >
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+          </label>
+        </div>
+        <div class="content-view">
+          <button class="">
+            <i class="fa-solid fa-table-cells-large"></i>
+          </button>
+          <button class="content-view-active">
+            <i class="fa-solid fa-table-list"></i>
+          </button>
+        </div>
+      </section>
     </main>
     <script type="module" src="./src/main.js"></script>
   </body>
