feat: added filter-menu desktop layout

--- a/index.html
+++ b/index.html
@@ -595,6 +595,63 @@
           </div>
         </div>
       </section>
+      <section class="filter-menu menu-invisible">
+        <div class="filter-menu-wrapper">
+          <div class="filter-menu-title">
+            <h3>篩選功能列</h3>
+            <button>
+              <i class="fa-solid fa-eraser"><p>ALL</p></i>
+            </button>
+          </div>
+          <div class="scroll-wrapper">
+            <div class="types-filter filter-wrapper">
+              <div class="filter-title">
+                <h4 class="option-visible-toggle">屬性篩選器</h4>
+                <button>
+                  <i class="fa-solid fa-eye"></i>
+                </button>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+            </div>
+            <div class="abilities-filter filter-wrapper">
+              <div class="filter-title">
+                <h4 class="option-visible-toggle">特性篩選器</h4>
+                <button>
+                  <i class="fa-solid fa-eye"></i>
+                </button>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+              </div>
+            </div>
+            <div class="stats-filter filter-wrapper">
+              <div class="filter-title">
+                <h4 class="option-visible-toggle">種族值篩選器</h4>
+                <button>
+                  <i class="fa-solid fa-eye"></i>
+                </button>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+            </div>
+            <div class="moves-filter filter-wrapper">
+              <div class="filter-title">
+                <h4 class="option-visible-toggle">招式篩選器</h4>
+                <button>
+                  <i class="fa-solid fa-eye"></i>
+                </button>
+                <button>
+                  <i class="fa-solid fa-eraser"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="./src/main.js"></script>
   </body>
