feat: added a close button in the top-left corner when expanding the filter-menu on tablet-sized devices.

--- a/index.html
+++ b/index.html
@@ -598,7 +598,10 @@
       <section class="filter-menu menu-invisible">
         <div class="filter-menu-wrapper">
           <div class="filter-menu-title">
-            <h3>篩選功能列</h3>
+            <div class="title-group">
+              <button class="close-menu"><i class="fa-solid fa-xmark"></i></button>
+              <h3>篩選功能列</h3>
+            </div>
             <button>
               <i class="fa-solid fa-eraser"><p>ALL</p></i>
             </button>
