feat: added .result-move-name <p> tag

--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
           </button>
         </div>
       </section>
-
       <section class="filter-result-head result-expand">
         <div class="result-head-fixed-container result-head-container">
           <div class="result-title serial-number">
@@ -166,8 +165,8 @@
           <div class="result-title pokemon-abilities">
             <div class="table-title">特性</div>
             <div class="subtitle-group">
-              <div class="subtitle">特性一</div>
-              <div class="subtitle">特性二</div>
+              <div class="subtitle ability-subtitle">特性一</div>
+              <div class="subtitle ability-subtitle">特性二</div>
               <div class="subtitle">隱藏特性</div>
             </div>
           </div>
@@ -290,7 +289,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -316,7 +315,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -342,7 +341,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -369,7 +368,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -396,7 +395,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -422,7 +421,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -448,7 +447,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -478,7 +477,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -504,7 +503,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -530,7 +529,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -560,7 +559,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
           <div class="result-species">
@@ -590,7 +589,7 @@
               </div>
             </div>
             <div class="result-species-group pokemon-move">
-              <div class="result result-move-name">招式機</div>
+              <div class="result result-move-name"><p>招式機</p></div>
             </div>
           </div>
         </div>
