--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="main-title">
         <h1>寶可夢篩選搜尋器</h1>
       </div>
-      <section class="filter-display display-expand">
+      <section class="filter-display display-default-size">
         <div class="pokemon-filter">
           <div class="filter-container">
             <div class="filter-title">
@@ -146,7 +146,7 @@
           </button>
         </div>
       </section>
-      <section class="filter-result-head result-expand">
+      <section class="filter-result-head result-default-size">
         <div class="result-head-fixed">
           <div class="head-scroll-wrapper">
             <div class="result-fixed result-head-container">
@@ -204,7 +204,7 @@
           </div>
         </div>
       </section>
-      <section class="filter-result-body result-expand">
+      <section class="filter-result-body result-default-size">
         <div class="result-body-scrollY">
           <div class="body-scroll-wrapper">
             <div class="result-scrollY result-body-container">
