fix: corrected the spelling of 'eletric' to 'electric'

--- a/index.html
+++ b/index.html
@@ -450,8 +450,10 @@
               </div>
               <div class="result-species">
                 <div class="result-species-group pokemon-types">
-                  <div class="result result-type-single type-eletric">
-                    <img src="./src/assets/img/type/pokemon-type-eletric.png" />
+                  <div class="result result-type-single type-electric">
+                    <img
+                      src="./src/assets/img/type/pokemon-type-electric.png"
+                    />
                     <p>電</p>
                   </div>
                 </div>
@@ -476,8 +478,10 @@
               </div>
               <div class="result-species">
                 <div class="result-species-group pokemon-types">
-                  <div class="result result-type-single type-eletric">
-                    <img src="./src/assets/img/type/pokemon-type-eletric.png" />
+                  <div class="result result-type-single type-electric">
+                    <img
+                      src="./src/assets/img/type/pokemon-type-electric.png"
+                    />
                     <p>電</p>
                   </div>
                 </div>
@@ -502,8 +506,10 @@
               </div>
               <div class="result-species">
                 <div class="result-species-group pokemon-types">
-                  <div class="result result-type-double type-eletric">
-                    <img src="./src/assets/img/type/pokemon-type-eletric.png" />
+                  <div class="result result-type-double type-electric">
+                    <img
+                      src="./src/assets/img/type/pokemon-type-electric.png"
+                    />
                     <p>電</p>
                   </div>
                   <div class="result result-type-double type-psychic">
