refactor: refactored folder structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icon/levelball.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>寶可夢篩選搜尋器</title>
     <link
@@ -121,18 +121,16 @@
         </div>
         <div class="filter-button-wrapper">
           <button class="filter-button">
-            <i class="fa-solid fa-angle-left"></i
-            ><i class="fa-solid fa-filter-circle-xmark"></i>
+            <i class="fa-solid fa-angle-left"></i><i class="fa-solid fa-filter-circle-xmark"></i>
           </button>
         </div>
         <div class="result-stats"><p>一共搜尋到 100 隻符合條件的寶可夢</p></div>
         <div class="pokemon-search">
           <label for="search-pokemon">
-            <input
-              type="text"
-              id="search-pokemon"
-              placeholder="快速搜尋寶可夢"
-            /><button type="button" class="search-pokemon-submit">
+            <input type="text" id="search-pokemon" placeholder="快速搜尋寶可夢" /><button
+              type="button"
+              class="search-pokemon-submit"
+            >
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
           </label>
@@ -451,9 +449,7 @@
               <div class="result-species">
                 <div class="result-species-group pokemon-types">
                   <div class="result result-type-single type-electric">
-                    <img
-                      src="./src/assets/img/type/pokemon-type-electric.png"
-                    />
+                    <img src="./src/assets/img/type/pokemon-type-electric.png" />
                     <p>電</p>
                   </div>
                 </div>
@@ -479,9 +475,7 @@
               <div class="result-species">
                 <div class="result-species-group pokemon-types">
                   <div class="result result-type-single type-electric">
-                    <img
-                      src="./src/assets/img/type/pokemon-type-electric.png"
-                    />
+                    <img src="./src/assets/img/type/pokemon-type-electric.png" />
                     <p>電</p>
                   </div>
                 </div>
@@ -507,9 +501,7 @@
               <div class="result-species">
                 <div class="result-species-group pokemon-types">
                   <div class="result result-type-double type-electric">
-                    <img
-                      src="./src/assets/img/type/pokemon-type-electric.png"
-                    />
+                    <img src="./src/assets/img/type/pokemon-type-electric.png" />
                     <p>電</p>
                   </div>
                   <div class="result result-type-double type-psychic">
@@ -716,6 +708,6 @@
         </div>
       </section>
     </main>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
