feat: synchronized scroll behavior across all pokemon-result

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </div>
         </div>
         <div class="result-head-scrollX">
-          <div class="head-scroll-wrapper">
+          <div class="head-scroll-wrapper" id="result-scrollX">
             <div class="result-scrollX result-head-container">
               <div class="result-title pokemon-types">
                 <div class="table-title">屬性</div>
@@ -204,7 +204,6 @@
       </section>
       <section class="filter-result-body result-default-size">
         <div class="result-body-scrollY">
-          <div class="body-scroll-wrapper">
             <div class="result-scrollY result-body-container">
               <div class="result-identify">
                 <div class="result result-serial-number"><p>#0004</p></div>
@@ -303,10 +302,10 @@
                 <div class="result result-regional-form"><p>阿羅拉</p></div>
               </div>
             </div>
+          <div class="body-scroll-wrapper" id="result-scrollY">
           </div>
         </div>
         <div class="result-body-scrollXY">
-          <div class="body-scroll-wrapper">
             <div class="result-scrollXY result-body-container">
               <div class="result-species">
                 <div class="result-species-group pokemon-types">
@@ -643,6 +642,7 @@
                 </div>
               </div>
             </div>
+          <div class="body-scroll-wrapper" id="result-scrollXY">
           </div>
         </div>
       </section>
