feat: added loading spinning before API data fetched

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <div id="loading-overlay" class=""></div>
     <main>
       <div class="main-title">
         <h1>寶可夢篩選搜尋器</h1>
