feat: added sorting function for pokemon-stats

--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
               <div class="result-title pokemon-stats">
                 <div class="table-title">種族值</div>
                 <div class="subtitle-group">
-                  <div class="subtitle">HP</div>
-                  <div class="subtitle">攻擊</div>
-                  <div class="subtitle">防禦</div>
-                  <div class="subtitle">特攻</div>
-                  <div class="subtitle">特防</div>
-                  <div class="subtitle">速度</div>
-                  <div class="subtitle"><b>總和</b></div>
+                  <button id="stat-hp" class="subtitle">HP</button>
+                  <button id="stat-atk" class="subtitle">攻擊</button>
+                  <button id="stat-def" class="subtitle">防禦</button>
+                  <button id="stat-spa" class="subtitle">特攻</button>
+                  <button id="stat-spd" class="subtitle">特防</button>
+                  <button id="stat-spe" class="subtitle">速度</button>
+                  <button id="stat-bst" class="subtitle"><b>總和</b></button>
                 </div>
               </div>
               <div class="result-title pokemon-moves">
